<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/ww"
    tools:context=".Login">

    <ImageView
        android:transitionName="logo_image"
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:src="@drawable/verification"
        android:contentDescription="@string/app_name" />

    <TextView
        android:transitionName="logo_text"
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/l7"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:transitionName="signup_tran"
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/l6"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/l5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/l4"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:transitionName="button3_tran"
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="#00000000"
            android:text="Forget Password?"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:layout_gravity="right"/>
        <Button
            android:id="@+id/login"
            android:transitionName="button_tran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l2"
            android:layout_marginBottom="5dp"
            app:backgroundTint="@color/black" />

        <Button
            android:transitionName="button2_tran"
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/l1"
            android:textColor="@color/black"
            android:layout_gravity="end"/>
    </LinearLayout>
</LinearLayout>