<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/ww"
    tools:context=".ForgetPass">

    <ImageView
        android:transitionName="logo_image"
        android:id="@+id/resetpass"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/passreset"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:transitionName="forget_text"
            android:id="@+id/forgetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike"
            android:text="@string/enter_your_registered_username"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forusername"
            android:layout_marginTop="40dp"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/l5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset"
            android:transitionName="button_tran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            app:backgroundTint="@color/black" />
    </LinearLayout>

</LinearLayout>