<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addmedicine.AddMedicineFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            app:cardCornerRadius="@dimen/four_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/sixteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.example.medilyf.views.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_days"
                    android:textColor="#F21AB5A3"
                    android:textSize="@dimen/text_medium" />


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/every_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every_day" />

                <LinearLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <com.example.medilyf.views.DayViewCheckBox
                        android:id="@+id/dv_sunday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="S" />

                    <com.example.medilyf.views.DayViewCheckBox
                        android:id="@+id/dv_monday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="M" />


                    <com.example.medilyf.views.DayViewCheckBox
                        android:id="@+id/dv_tuesday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="T" />

                    <com.example.medilyf.views.DayViewCheckBox
                        android:id="@+id/dv_wednesday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="W" />

                    <com.example.medilyf.views.DayViewCheckBox
                        android:id="@+id/dv_thursday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="T" />

                    <com.example.medilyf.views.DayViewCheckBox
                        android:id="@+id/dv_friday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="F" />


                    <com.example.medilyf.views.DayViewCheckBox
                        android:id="@+id/dv_saturday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="S" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            app:cardCornerRadius="@dimen/four_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/sixteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.example.medilyf.views.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reminder"
                    android:textColor="#F21AB5A3"
                    android:textSize="@dimen/text_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.medilyf.views.RobotoBoldTextView
                        android:id="@+id/tv_medicine_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_underline"
                        android:gravity="center"
                        android:padding="@dimen/four_dp"
                        android:textColor="#4d4d4d"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold"
                        tools:text="23:30" />

                    <EditText
                        android:id="@+id/tv_dose_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_underline"
                        android:gravity="center"
                        android:padding="@dimen/four_dp"
                        android:text="@string/_1_0" />


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_dose_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:entries="@array/medications_shape_array" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_height="101dp"
        app:cardCornerRadius="@dimen/four_dp"
        app:cardElevation="@dimen/two_dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/sixteen_dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.medilyf.views.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_medicine_name"
                android:textColor="#F21AB5A3"
                android:textSize="@dimen/text_medium" />

            <EditText
                android:id="@+id/edit_med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_med_name" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>